--- a/src/sdg/scss/components/_radioGroup.scss
+++ b/src/sdg/scss/components/_radioGroup.scss
@@ -18,8 +18,7 @@
 }
 
 .qc-radio-legend {
-  display: flex;
-  flex-direction: row;
+  display: -webkit-box;
 }
 
 .qc-radio-group-sm {
